--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ attrs==22.2.0
 backcall==0.2.0
 bcrypt==4.0.1
 bleach==6.0.0
-blosc2==2.1.1
+blosc2==2.0.0
 cffi==1.15.1
 click==8.1.3
 comm==0.1.2
@@ -107,3 +107,4 @@ webencodings==0.5.1
 websocket-client==1.5.1
 websockets==10.4
 widgetsnbextension==4.0.5
+httpx
